--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="5ON-v5-ibT">
-                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                                <rect key="frame" x="44" y="0.0" width="808" height="393"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pAc-Nu-BCl">
-                                <rect key="frame" x="115" y="20" width="668" height="374"/>
+                                <rect key="frame" x="115" y="20" width="666" height="374"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="gYg-Ra-0iQ">
                                         <rect key="frame" x="55" y="83" width="535" height="31"/>
@@ -91,7 +91,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZz-5s-roI">
-                                        <rect key="frame" x="379" y="266" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="377" y="266" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -103,7 +103,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YD9-FG-4KO">
-                                        <rect key="frame" x="279" y="195" width="100" height="36"/>
+                                        <rect key="frame" x="277" y="195" width="100" height="36"/>
                                         <state key="normal" title="Hit Me!" backgroundImage="Button-Normal">
                                             <color key="titleColor" red="0.37647058820000001" green="0.1176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -159,13 +159,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="pAc-Nu-BCl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="115" id="8cs-rx-awk"/>
-                            <constraint firstItem="5ON-v5-ibT" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="9B6-kh-Ta5"/>
-                            <constraint firstItem="5ON-v5-ibT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9uH-nm-55z"/>
+                            <constraint firstItem="5ON-v5-ibT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9B6-kh-Ta5"/>
+                            <constraint firstItem="5ON-v5-ibT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="44" id="9uH-nm-55z"/>
                             <constraint firstItem="pAc-Nu-BCl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="O0j-4m-cf8"/>
                             <constraint firstItem="pAc-Nu-BCl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="fg6-LP-KV3"/>
                             <constraint firstItem="5ON-v5-ibT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nJI-xS-R28"/>
                             <constraint firstItem="5ON-v5-ibT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vwN-9e-xsv"/>
-                            <constraint firstItem="5ON-v5-ibT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="z9m-aO-8U5"/>
+                            <constraint firstItem="5ON-v5-ibT" firstAttribute="centerX" secondItem="pAc-Nu-BCl" secondAttribute="centerX" id="z9m-aO-8U5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
